# JIRA-tool

./: .env.example  .gitignore  DESIGN.md  JIRA_UPLOAD_TESTING.md  OLLAMA_INTEGRATION_SUMMARY.md  OLLAMA_SETUP.md  PHASE1_STATUS.md  PHASE2_UI_DESIGN.md  README.md  TEST_REPORT.md  TROUBLESHOOTING.md  app.py  config.py  jira_client.py  jira_gen.py  markdown_parser.py  markdown_utils.py  models.py  prj-definition.md  pyproject.toml  requirements.txt  start-ui.sh  start.sh  status.sh  stop-ui.sh  stop.sh  test_bug.txt  test_epic.txt  test_input.txt  test_jira_connection.py  test_ollama.py  test_simple.txt  test_story.txt  test_upload_tickets.md
agents/: extraction_agent.py  prompts.py  review_agent.py
claudedocs/: COMPREHENSIVE_TEST_REPORT.md
ui/: .gitignore  README.md  index.html  package.json  vite.config.js
ui/src/: App.jsx
ui/src/components/: FilesPanel.jsx  Header.jsx  InputPanel.jsx  MarkdownEditor.jsx  ResultsPanel.jsx
