[project]
name = "jira-tool"
version = "0.1.0"
description = "Jira Ticket Generator - Two-Agent design"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "click",
  "python-dotenv",
  "requests",
  "pydantic",
  "rich"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
